# TN4QA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION  CONTRIBUTING  LICENSE  README.md  pyproject.toml  setup.py  startup.sh  test_qi_metrics.ipynb  testing.ipynb
.github/: ci.yml
.github/workflows/: ci-linux.yml
benchmarking/: block2.json  dmrg_timings.py  one_site_method.json  quimb_dmrg.py  subspace_expansion_method.json  two_site_method.json  utils.py
docs/source/: conf.py  index.rst
docs/source/md/: basics.md  dmrg.md  qi_metrics.md  warm_starting.md
hamiltonians/: HeH.json  HeH_sto-3g.json  LiH.json  LiH_sto-3g.json  N2.json  N2_sto-3g.json  water_sto-3g.json
molecules/: H2.json  LiH.json
notebooks/: MI.ipynb  basic_usage.ipynb  dmrg.ipynb  run_scan.ipynb  run_scan.py  test_encodings.ipynb
notebooks/hamiltonians/: bk.json  jkmn.json  jw.json  knto.json  pe.json  xz_swapped_knto.json
qmmbed/: tense.py
test/: test_device_characterisation.py  test_dmrg.py  test_mpo.py  test_mps.py  test_noise_model.py  test_qi_metrics.py  test_tensor.py  test_tn.py
test/data/: h2_rdm.json  h2_string.py  qexa-calibration-data-2024-10-15.json
test/hams/: N2_ham.json
tn4qa/: cost.py  dmrg.py  mpo.py  mps.py  qi_metrics.py  tensor.py  tn.py  utils.py  visualisation.py
tn4qa/applications/: configuration_restricted_ansatz.py
tn4qa/noise_model/: build.py  device_characterisation.py  noise_data.py
tn4qa/quantum_algorithms/: ansatz.py  hadamard_test.py  optimiser.py  qa_base.py  qpe.py  qsci.py  trotter.py  utils.py  variational.py  vqe.py
(+68 files in other folders)
