[tool.poetry]
name = "tn4qa"
version = "0.1.0"
description = "A Python package to integrate tensor network methods with quantum algorithms."
authors = [
    "Angus Mingare <angus.mingare.22@ucl.ac.uk>",
    "Isabelle Heuzé <isabelle.heuze.24@ucl.ac.uk>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
sparse = "^0.15.4"
qiskit = "^1.3.0"
qiskit-ibm-runtime = "^0.34.0"
qiskit-aer = "^0.15.1"
cotengra = "^0.6.2"
kahypar = "^1.3.5"
block2 = "^0.5.3"
symmer = "^0.0.7"
scipy = "~1.9.3"
numpy = "^1.18.5"
ruff = "^0.8.2"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
poetry = "^1.8.5"
pre-commit = "^4.0.1"
pydocstyle = "^6.3.0"
pytest = "^7.2.2"
coverage = "^7.6.9"
cotengrust = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ignore pytest warnings here
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.(duration|unit)`` is deprecated as of qiskit 1.3.0.*",
]

[tool.ruff]
exclude = ["notebooks/"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",
    "F",
    #"D", #pydocstyle (lets add this when we actually write docstrings)
    "I", #isort
]

ignore = ["E741"]

[tool.ruff.lint.pydocstyle]
convention = "google"
